fix(theme): wrap end-of-lines spaces

--- a/packages/remirror__styles/all.css
+++ b/packages/remirror__styles/all.css
@@ -594,14 +594,6 @@ button:active .remirror-menu-pane-shortcut,
   position: relative;
 }
 
-.remirror-editor.ProseMirror[contenteditable='false'] {
-  white-space: normal;
-}
-
-.remirror-editor.ProseMirror[contenteditable='true'] {
-  white-space: pre-wrap;
-}
-
 .remirror-editor.ProseMirror hr {
   border-color: #2e2e2e;
 }
