--- a/packages/remirror__styles/core.css
+++ b/packages/remirror__styles/core.css
@@ -19,14 +19,6 @@
   position: relative;
 }
 
-.remirror-editor.ProseMirror[contenteditable='false'] {
-  white-space: normal;
-}
-
-.remirror-editor.ProseMirror[contenteditable='true'] {
-  white-space: pre-wrap;
-}
-
 .remirror-editor.ProseMirror hr {
   border-color: #2e2e2e;
 }
